tests/NormalTests/paczka1/small_fuzzy/76301852.err
Error in line 9: 3KxA8BavPDe A352 46,97
Error in line 11: 3KxA8BavPDe A35 08,7
Error in line 13: tewVJMuTMW A591 22,6
